finish site. fixed layout, added dark mode, polished filter logic, added styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,35 @@
+
 body {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 14px;
+    min-height: 100vh;
+}
+
+#root, .whole-view {
+    min-height: 100vh;
+}
+
+#light {
+    color: hsl(200, 15%, 8%);
+    background-color: hsl(0, 0%, 100%);
+}
+
+#light .container-fluid {
+    background-color:  hsl(0, 0%, 98%);
+}
+
+#dark {
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(209, 23%, 22%);
+}
+
+#dark .container-fluid {
+    background-color:  hsl(207, 26%, 17%)
+}
+
+#dark .card {
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(209, 23%, 22%);
 }
 
 h1 {
@@ -8,22 +37,82 @@ h1 {
 }
 
 p {
-    font-weight: 800;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+span {
+    font-weight: 300;
+}
+
+.mode-text {
+    font-size: 16px;
+    font-weight: 600px;
 }
 
 .container-fluid {
-    background-color:  hsl(0, 0%, 98%);
+    min-height: 100vh;
+
 }
 
-.header-bg {
-    background-color: hsl(0, 0%, 100%);
-}
+
 
 .card-img-top {
     width: 100%;
     height: 50%;
     object-fit: fill;
 }
+
+.card-title {
+    font-weight: 800;
+    font-size: 22px;
+}
+
+
+.MuiAutocomplete-inputRoot{
+    background-color: white;
+}
+
+.auto_label {
+    color: white !important;
+}
+
+
+/*autocomplete*/
+input {
+  border: 1px solid #999;
+  padding: 8px;
+  width: 300px;
+}
+.no-autocomplete {
+  color: #999;
+  padding: 8px;
+}
+.autocomplete {
+  border: 1px solid #999;
+  border-top-width: 0;
+  list-style: none;
+  margin-top: 0;
+  max-height: 143px;
+  overflow-y: auto;
+  padding-left: 0;
+  width: calc(300px + 1rem);
+}
+.autocomplete li {
+  padding: 8px;
+}
+.autocomplete > .active,
+.autocomplete li:hover {
+  background-color: darkgray;
+  cursor: pointer;
+  font-weight: 700;
+}
+.autocomplete li:not(:last-of-type) {
+  border-bottom: 1px solid #999;
+}
+
+
+
 
 /*- Dark Blue (Dark Mode Elements): hsl(209, 23%, 22%)
 - Very Dark Blue (Dark Mode Background): hsl(207, 26%, 17%)
